# arbin

./: .gitignore  UItest.py  arbin.py  arbin_main.py  arbin_manual.py  arbin_scripts.py  arbin_settings.yml  environment.yml  filt.py  load.py  main.py  main.spec  mainGUI.py  mainGUI.ui  manual_run.py  plot_capacity_old.ipynb  plot_capacity_steps.ipynb  plot_cycles.ipynb  plot_data.py  plot_info  plot_voltage_cycle.ipynb  plot_voltage_steps.ipynb  pyproject.toml  readme.md  requirements.txt  resources.py  resources.qrc  save.py
Archive/: filt.py  load.py  plot_capacity.ipynb  plot_capacity_Half_NMC.ipynb  plot_data.py  plot_voltage_cycle.ipynb  save.py
Documentation/: cufflinks_reference.py
Excel addin/: SaveAsCsv
plotting/: cycles.ipynb  plot_scripts.py  voltage.ipynb
test_data/: cell_1.csv  cell_2.csv  cell_3.csv  cell_info.csv
test_data/output/: avg_params_cycle_average_data.csv  params_cycle_cell_1.csv  params_cycle_cell_2.csv  params_cycle_cell_3.csv  volt_params_cell_1.csv  volt_params_cell_2.csv  volt_params_cell_3.csv
